# RawkodeAcademy

./: .editorconfig  .envrc  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .infisical.json  .npmrc  .prototools  .sops.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.adoc  README.md  SECURITY.md  SOPS.md  build.cue  build.gradle.kts  bun.lockb  bunfig.toml  cog.toml  dagger.cue  dagger.go  dagger.json  dagger.ts  devenv.nix  env.cue  flake.nix  go.mod  go.work  go.work.sum  gradlew  gradlew.bat  jest.config.ts  knip.json  nx.json  (+11 more)
cli/: Cargo.toml  sample_episode.hcl  sample_episode.kdl
cli/scripts/: migrate.sh
cli/src/: cli.rs  main.rs
cli/src/command/: format.rs  lint.rs  sync.rs
cli/src/model/: episode.rs  mod.rs  people.rs  show.rs  technology.rs
data/cli/: Cargo.toml
data/cli/src/: main.rs  schema.rs
linter/: Cargo.toml  sample_episode.hcl
linter/src/: cli.rs  format.rs  main.rs
projects/rawkode-academy/: .envrc  .infisical.json  Cargo.toml  Justfile  dev.rs  pkgx.yaml  rawkode.academy.code-workspace  sops.yaml
projects/rawkode-academy/api/: .gitignore  package.json  pkgx.yaml
projects/rawkode-academy/dagger/: dagger.json  dev.rs  go.mod  main.go
projects/rawkode-academy/data/: README.md  build_tool.cue  bun.lockb  export.cue  index.ts  package.json  utils.ts
projects/rawkode-academy/events-service/: Justfile
projects/rawkode-academy/image-service/: Justfile  README.md  astro.config.mjs  biome.json  flake.nix  package.json  tsconfig.json  vitest.config.ts
projects/rawkode-academy/people-service/: .envrc  .gitignore  Justfile  README.md  bun.lockb  devenv.nix  package.json
projects/rawkode-academy/querytube-service/: .envrc  Justfile  bun.lockb  package-lock.json
projects/rawkode-academy/rpc/: .envrc  .gitignore  Justfile  astro.config.mjs  bun.lockb  devenv.nix  package.json  trigger.config.ts  wrangler.toml
projects/rawkode-academy/rsvp-service/: .envrc  .gitignore  Justfile  README.md  bun.lockb  drizzle.config.ts  package.json  pkgx.yaml  tsconfig.json  wrangler.toml
projects/rawkode-academy/show-hosts-service/: .envrc  Justfile  package.json
projects/rawkode-academy/shows-service/: .envrc  README.md  flake.nix  package.json
projects/rawkode-academy/supabase/: config.toml  seed.sql
projects/rawkode-academy/technologies-service/: .gitignore  Justfile  README.md  bun.lockb  dagger.json  devenv.nix  devenv.yaml  package.json
projects/rawkode-academy/technology-service/: .envrc  README.md  bun.lockb  dagger.json  tsconfig.json
projects/rawkode-academy/videos-service/: .envrc
projects/rawkode-academy/web/: .dev.vars.tpl  .envrc  .gitignore  Justfile  README.md  astro.config.mjs  bun.lockb  devenv.nix  flake.nix  gitlab-ci.yml  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
projects/rawkode-academy/youtube-scraper/: package.json
projects/rawkode.academy/: .envrc  .gitignore  .infisical.json  .sops.yaml  CLAUDE.md  COMMIT_MESSAGE.md  Cargo.toml  IDENTITY_CONTINUITY_SUMMARY.md  Justfile  README.adoc  README.asciidoc  README.md  architecture.d2  flake.nix  mprocs.yaml  package-lock.json  package.json  pkgx.yaml  rawkode.academy.code-workspace  sops.admin.yaml  tailwind.config.cjs
projects/rawkode.academy/.claude/: settings.local.json
projects/rawkode.academy/.flox/: env.json
projects/rawkode.academy/analytics/: .envrc  devenv.nix  package.json
projects/rawkode.academy/api/: Dockerfile  README.md  bun.lockb  config.yaml  fly.toml  gateway.toml  grafbase.config.ts
projects/rawkode.academy/app/: .gitignore  .metadata  README.md  devenv.nix  devenv.yaml  local.properties  pubspec.yaml
projects/rawkode.academy/backend/: Justfile  backend.code-workspace  graphql.html  pkgx.yaml
projects/rawkode.academy/cli/: go.mod  go.sum  rka.go
projects/rawkode.academy/cloudnative-pg/: README.md  helm-release.yaml
projects/rawkode.academy/cms/: .dockerignore  .envrc  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  nodemon.json  package.json  pnpm-lock.yaml  railway.toml  rome.json  tsconfig.json
projects/rawkode.academy/code/: package.json
projects/rawkode.academy/config/: menu.ts
projects/rawkode.academy/dagger/: dagger.json  main.go
projects/rawkode.academy/data/: .gitignore  Cargo.toml  Justfile  README.md  build_tool.cue  deno.json  export.cue  pkgx.yaml  sync.ts
projects/rawkode.academy/data-cue/: pkgx.yaml
projects/rawkode.academy/episodes/: README.md  deno.jsonc
projects/rawkode.academy/episodes-service/: .dockerignore  .envrc  Dockerfile  README.md  dagger.json  deno.jsonc  deployctl-read-model.json  deployctl-write-model.json
projects/rawkode.academy/events-service/: .envrc  README.md
projects/rawkode.academy/fluxcd/: README.md  zitadel.yaml  zulip.yaml
projects/rawkode.academy/forgepoint/: map.cue
projects/rawkode.academy/forgepoint-astro/: CLAUDE.md  CURRENT.md  GEMINI.md  README.md  astro.config.mjs  biome.json  devenv.nix  package.json
projects/rawkode.academy/image-service/: .gitignore  LICENSE  package.json  tsconfig.json
projects/rawkode.academy/infrastructure/: .envrc  .terraform.lock.hcl  main.tf  provider.tf  state.tf  variables.tf
projects/rawkode.academy/new/: .gitignore  astro.config.mjs  biome.json  bun.lockb  package-lock.json  package.json  tsconfig.json
projects/rawkode.academy/people/: README.md
projects/rawkode.academy/people-service/: .envrc  README.md  dagger.json  deno.jsonc  deployctl-read-model.json  deployctl-write-model.json
projects/rawkode.academy/platform/: CLAUDE.md
projects/rawkode.academy/querytube-service/: .gitignore  import.ts  tsconfig.json
projects/rawkode.academy/rpc/: astro.config.mjs  bun.lockb  package.json
projects/rawkode.academy/show-hosts/: .envrc  README.md
projects/rawkode.academy/show-hosts-service/: .envrc  .gitignore  README.md  dagger.json  deno.jsonc  deployctl-write-model.json  package.json  super
projects/rawkode.academy/shows-service/: Justfile  README.md  bun.lockb  dagger.json  (+5 more)
(+5429 files in other folders)
