[workspace]
resolver = "2"

members = [
  "projects/rawkode.academy/"
]

[workspace.package]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://gitlab.com/RawkodeAcademy/RawkodeAcademy"

[workspace.dependencies]
color-eyre = "0.6.2"
dagger-sdk = "0.3.2"
eyre = "0.6.9"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
thiserror = "1.0.50"
