[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.5.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.66"
serde_yaml = "0.9.14"
serde = { version = "1.0.149", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
validator = { version = "0.15", features = ["derive"] }
