[package]
name = "rawkode-academy"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "dev"
path = "dagger/dev.rs"

[dependencies]
dagger-sdk = { workspace = true }
eyre = { workspace = true }
jwt = "0.16.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
passwords = "3.1.16"
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.33"
signal-hook = "0.3.17"
urlencoding = "2.1.3"
