[package]
name = "rawkode-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
shuttle-axum = { version = "0.56.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.56.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tantivy = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
