[package]
name = "ingress-hasura-event-triggers"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.1", features = ["http2", "macros"] }
axum-extra = { version = "0.4.2", features = ["protobuf"] }
cloudevents-sdk = { version = "0.6.0", features = ["rdkafka"] }
hyper = "0.14.23"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
rdkafka = { version = "0.29.0" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
