[package]
name = "graphql-libsql-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
crossterm = "0.27"
ratatui = "0.24"
libsql = "0.3"
anyhow = "1.0"
cuid2 = "0.1"
