[package]
name = "analytics-health-checker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cloudevents-sdk = { version = "0.7", features = ["reqwest"] }
console_error_panic_hook = "0.1"
uuid = { version = "1.6", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"